--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/fonts/iconfont.css">
-    <link rel="stylesheet" href="./css/swiper.css">
-    <!-- <link rel="stylesheet" href="./css/style.css"> -->
-    <link rel="stylesheet" href="./scss/style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <!-- <link rel="stylesheet" href="./scss/style.css"> -->
     <!-- <link rel="stylesheet" href="./css/mincss/style.css"> -->
 </head>
 
@@ -41,10 +39,7 @@
         </div>
     </div>
     <script src="./libs/flexible.js"></script>
-    <script src="./libs/better-scroll.js"></script>
-    <script src="./libs/swiper.js"></script>
     <script src="./libs/zepto.js"></script>
-    <script src="./js/index.js"></script>
     <!-- <script src="./js/minjs/index.js"></script> -->
 </body>
 
